--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-imask": "^7.1.3",
+    "react-input-mask": "^2.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
