--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "primereact": "^9.6.2",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "18.2.0",
-    "react-imask": "^7.1.3",
-    "react-input-mask": "^2.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
